# py-trailers

./: .gitignore
AddCopyright/: ReadMe.md  commonheader.h  copyright.txt  copyrighter.py  crux.py  defaults.json  new_copyright_file.txt  old_copyright_1.txt  old_copyright_2.txt  old_copyright_3.txt  old_copyright_file.txt  prepend.py  sample1.cpp  sample2.cpp  test.cpp  test_1.cpp  veneer.py
AddCopyright/my_child_dir1/: childsample1.cpp  childsampleheader.h
AddCopyright/my_directory/: commonheader.h  sample1.cpp  sample2.cpp
AddCopyright/old_copyright_dir/: old_copyright_1.txt  (+2 more)
KalmanFilter/: KalmanFilter.py  KalmanFilter_Tester.py
Questions/: py_questions.md
StringManipulation/: Base_voice_string_translations.xlsx  Multilanguage.xlsx  Navigation_base_voices_2020Q1.xlsx  ReadMe.md  TTS_basicaudio-cs-CS.sexp  app.py  pack_unpack.py  requirements.txt  text_translator.py
authenticator/: test.db
flask-crud-app/: bookdatabase.db  bookmanager.py
json_in_python/: basic.py  complex_data.json  custom_objects.py  scratch.py
kafka_mqtt_chat/: kafka_to_mqtt.py  mqtt_publisher.py  mqtt_subscriber.py  mqtt_to_kafka.py  requirements.txt
simplecrud/: .gitignore  Dockerfile  notes.md
try_ollama_langchain/: categorizer.py  mistral-modelfile  pdf-rag-clean.py  pdf-rag-streamlit.py  pdf-rag.py  peter-pan.txt  rag.py  requirements.txt  start-2.py  test.ollama.http
use_private_lib/sample_library/: pyproject.toml
use_private_lib/sample_library/data/: CLTO15011.parquet  chargeup_read_parquet - 05072024.ipynb
use_private_lib/sample_project/: main.py  pyproject.toml
(+59 files in other folders)
