[tool.poetry]
name = "sample-library"
version = "0.1.0"
description = ""
authors = ["Krishna Kishore Donthikurthi <kishore.donthikurthi@ispace.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
